--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
-* {
+body {
   font-family: "open sans", Verdana, arial, sans-serif;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
 }
